<resources>
    <string name="app_name">Volunteer App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MILLATI</string>
    <string name="nav_header_subtitle">17106050030</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tv_latest_contributions">Latest Contributions</string>

    <!--Toast-->
    <string name="toast_not_pick_image">You haven\'t picked Image</string>
    <string name="toast_image_uploaded">Image Uploaded!</string>
    <string name="toast_permission_granted">Permission granted!</string>
    <string name="toast_permission_denied">Permission denied!</string>
    <string name="toast_need_permission">You need permission to use this feature!</string>
    <string name="toast_login_succesfull">Login Succesfull!</string>
    <string name="toast_register_successfull">Register Successfull!</string>
    <string name="toast_record_started">Record started</string>
    <string name="toast_record_finished">Record finished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="tv_quotes">Love only grows by sharing. You can only have more for yourself by giving it away to others</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title">Title</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>

    <string name="type_blind">Tuna Netra</string>
    <string name="type_deaf">Tuna Rungu</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="app_icon">App Icon</string>
    <string name="forgot_password">Forgot your Password? </string>
    <string name="not_a_member_register_now">Not a member? Register now!</string>
    <string name="reset_password">Reset Password</string>
    <string name="tv_record_message">Press the button to start recording</string>
    <string name="email_isrequired">Email is required</string>
    <string name="password_isrequired">Password is required</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="save">save</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="volunteer">Volunteer</string>
    <string name="difable">Difable</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="enter_registered_email">Enter Your Registered Email Id</string>
    <string name="go_check_email">Go check your email to reset your password</string>
    <string name="failed_reset_password">Failed to Reset your Password</string>
    <string name="home">Home</string>
    <string name="tuna_netra">Tuna Netra</string>
    <string name="tuna_rungu">Tuna Rungu</string>
    <string name="kontribusi_saya">Kontribusi Saya</string>
    <string name="upload_image_success">Upload Image Successful!</string>
    <string name="name_isrequired">Name is Required</string>
    <string name="phoneNumb_isrequired">Phone Number is Required</string>
    <string name="enter_valid_number">Please Enter Valid Number (Eg : +62xxxxxxxxxxx)</string>
    <string name="unable_choose_image">Unable to Choose Image!</string>
    <string name="signup_successful">Sign Up Successful</string>
    <string name="error_tag">ERROR :</string>
    <string name="signup_unseccessful">SignUp Unsuccessful</string>
    <string name="respone_code_tag">RESPONSE CODE :</string>
    <string name="tag">TAG</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_unsuccessful">Login Unsuccessful. Please check your email or password.</string>
    <string name="desc_app_icon">Application Icon</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_login">LOG IN</string>
    <string name="desc_login_button">Login button</string>
    <string name="tv_forgot_password">Forgot your Password</string>
    <string name="tv_not_a_member_register_now">Not a Member? Register now!</string>

    <string-array name="array_category">
        <item>Category</item>
        <item>Aktivitas</item>
    </string-array>
</resources>
