<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_tuna_netra"
            android:icon="@drawable/ic_visibility_off_black_24dp"
            android:title="@string/tuna_netra" />
        <item
            android:id="@+id/nav_tuna_rungu"
            android:icon="@drawable/ic_hearing_black_24dp"
            android:title="@string/tuna_rungu" />
        <item
            android:id="@+id/nav_my_contributions"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/kontribusi_saya" />
    </group>

</menu>
